--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 ایران فیلم پلاس, یک سایت مرجع رایگان <a href="http://www.iranfilmplus.net/search/label/%D8%AA%D9%85%D8%A7%D8%B4%D8%A7%DB%8C%20%D9%81%DB%8C%D9%84%D9%85%20%D8%A2%D9%86%D9%84%D8%A7%DB%8C%D9%86">تماشای آنلاین فیلم</a> های سینمایی خارجی به صورت دوبله فارسی و بدون سانسور است. همه سعی این وبسایت بر این است که فیلم و سریالهای دوبله فارسی و یا گاها با زیر نویس فارسی از <b>سینمای هالیوود</b> و یا دیگر سینماهای کشورهای صاحب سبک جهان را به صورت بدون سانسور و حذفیات در اختیار بازدیدکنندگان خود قرار دهد.
 </p>
 <div class="separator" style="clear: both; text-align: center;">
-<img alt="iranfilmplus.com" border="0" data-original-height="290" data-original-width="600" height="360" src="https://3.bp.blogspot.com/-YLjM87F6IPo/WV0W3f7gfZI/AAAAAAAAr78/BY7Zqo1kNJIXwTWl1PKRVNmdL3IEeM_ogCLcBGAs/s600-rw/IFP%2Bcover.png" title="iranfilmplus.com" width="640" /></div>
+<img alt="iranfilmplus.com" border="0" data-original-height="290" data-original-width="600" height="360" src="https://3.bp.blogspot.com/-YLjM87F6IPo/WV0W3f7gfZI/AAAAAAAAr78/BY7Zqo1kNJIXwTWl1PKRVNmdL3IEeM_ogCLcBGAs/s600-rw/IFP%2Bcover.png" title="iranfilmplus.com" width="640" alt="Iran Film" title="تماشای آنلاین فیلم"/></div>
 <p>
 همچنین این وبسایت دارای یک <b>تلویزیون اینترنتی</b> است که امکان پخش آنلاین شبکه های تلویزیونی ایران و نیز کانالهای ماهواره ای فارسی زبان همچون <a href="http://tv.iranfilmplus.net/search/label/%D8%AA%D9%84%D9%88%DB%8C%D8%B2%DB%8C%D9%88%D9%86%20%D8%AC%D9%85">شبکه های تلویزیون جم GEM</a>، سینه فیلم، PMC و ... را به صورت کاملا رایگان در اختیار بازدید کنندگان خود قرار می دهد.
 <br/>
