--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <div class="separator" style="clear: both; text-align: center;">
 <img border="0" data-original-height="290" data-original-width="600" height="360" src="https://3.bp.blogspot.com/-YLjM87F6IPo/WV0W3f7gfZI/AAAAAAAAr78/BY7Zqo1kNJIXwTWl1PKRVNmdL3IEeM_ogCLcBGAs/s600-rw/IFP%2Bcover.png" title="iranfilmplus.com" width="640" alt="Iran Film" title="تماشای آنلاین فیلم"/></div>
 <p>
-همچنین این وبسایت دارای یک <b>تلویزیون اینترنتی</b> است که امکان پخش آنلاین شبکه های تلویزیونی ایران و نیز کانالهای ماهواره ای فارسی زبان همچون <a href="http://tv.iranfilmplus.net/" title="شبکه جم تی وی">شبکه های تلویزیون جم GEM</a>، سینه فیلم، PMC و ... را به صورت کاملا رایگان در اختیار بازدید کنندگان خود قرار می دهد.
+همچنین این وبسایت دارای یک <b>تلویزیون اینترنتی</b> است که امکان پخش آنلاین شبکه های تلویزیونی ایران و نیز کانالهای ماهواره ای فارسی زبان همچون <a href="http://tv.iranfilmplus.net/%d8%aa%d9%84%d9%88%db%8c%d8%b2%db%8c%d9%88%d9%86-%d8%ac%d9%85/" title="شبکه جم تی وی">شبکه های تلویزیون جم GEM</a>، سینه فیلم، PMC و ... را به صورت کاملا رایگان در اختیار بازدید کنندگان خود قرار می دهد.
 <br/>
 در قسمت پخش زنده سایت هم امکان <b>پخش زنده فوتبال</b>، پخش زنده شبکه 3 و شبکه ورزش و نیز پخش آنلاین دیگر مسابقات ورزشی وجود دارد.
 
