--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
 <meta content='index, follow' name='robots'/>
 <meta content='index, follow' name='GOOGLEBOT'/>
 <meta content='index, follow' name='yahooBOT'/>    
-    <title>تماشای آنلاین فیلم رایگان در اینترنت</title>	
+<title>دانلود رایگان و تماشای آنلاین فیلم در اینترنت</title>	
+<meta name="description" content="ایران فیلم پلاس, یک سایت مرجع رایگان تماشای آنلاین فیلم تماشای آنلاین فیلمهای سینمایی خارجی به صورت دوبله فارسی و بدون سانسور است." />
+<meta content='fa' name='language'/>
+<meta http-equiv="content-language" content="fa" />
   </head>
   <body dir="rtl">
-<h1>راهنمای تماشای آنلاین فیلم دوبله رایگان در اینترنت</h1>
+<h1>معرفی سایت تماشای آنلاین فیلم رایگان در اینترنت</h1>
 <p>
 در حال حاضر تعداد سایتهایی که امکان پخش آنلاین و <b>تماشای فیلم</b> و سریالهای <b>دوبله فارسی بدون سانسور</b> را به صورت رایگان برای ایرانیان مهیا کرده اند، زیاد نیست. بسیاری از سایتهای داخلی اقدام به فروش اشتراک می کنند و در آخر هم فیلمهای تایید شده حکومتی را با انواع و اقسام سانسور به خورد بازدیدکنندگان خود می دهند. 
 <br/>
@@ -29,7 +32,7 @@
 در قسمت پخش زنده سایت هم امکان <b>پخش زنده فوتبال</b>، پخش زنده شبکه 3 و شبکه ورزش و نیز پخش آنلاین دیگر مسابقات ورزشی وجود دارد.
 
 </p>
-<h3>راهنمای تصویری تماشای فیلم آنلاین</h3>
+<h2>راهنمای تصویری تماشای فیلم آنلاین</h2>
 <p>
 تماشای فیلمها در وبسایت IranFilmPlus.Com برای همه بازدیدکنندگان <b>کاملا رایگان</b> بوده و هیچ نیازی به ثبت نام و یا خرید اشتراک ندارد. نحوه پخش ساده است و فیلم ها معمولا بر روی یک سرور اصلی و 5 سرور مجزای کمکی پخش می شوند. این امر به بازدیدکنند کمک می کند که در صورتی که یکی از سرورها به دلایلی اعم از فنی یا بلاک بودن امکان پخش نداشته باشند، کاربر بتواند از سرورهای دیگر فیلم مورد نظر خود را پخش و یا دانلود کند. 
 <br/>
