--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta content='index, follow' name='GOOGLEBOT'/>
 <meta content='index, follow' name='yahooBOT'/>    
 <title>دانلود رایگان و تماشای آنلاین فیلم در اینترنت</title>	
-<meta name="description" content="ایران فیلم پلاس, یک سایت مرجع رایگان تماشای آنلاین فیلم تماشای آنلاین فیلمهای سینمایی خارجی به صورت دوبله فارسی و بدون سانسور است." />
+<meta name="description" content="جدیدترین فیلمهای سینمایی خارجی دوبله و بدون سانسور را به صورت رایگان در رسانه ایران فیلم پلاس ببینید و دانلود کنید." />
 <meta content='fa' name='language'/>
 <meta http-equiv="content-language" content="fa" />
   </head>
