--- a/index.html
+++ b/index.html
@@ -1,14 +1,19 @@
 <html lang="fa">
   <head>
+<meta content='text/html;charset=UTF-8' http-equiv='Content-Type'/>
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<link rel='canonical' href="https://iranfilmplus.github.io/iran-film/" />
+ <title>دانلود رایگان و تماشای آنلاین فیلم در اینترنت</title>	
+<meta name="description" content="جدیدترین فیلمهای سینمایی خارجی دوبله و بدون سانسور را به صورت رایگان در رسانه ایران فیلم پلاس ببینید و دانلود کنید." />
 <meta content='fa' name='language'/>
 <meta content='All' name='Robots'/>
 <meta content='index, follow' name='robots'/>
 <meta content='index, follow' name='GOOGLEBOT'/>
-<meta content='index, follow' name='yahooBOT'/>    
-<title>دانلود رایگان و تماشای آنلاین فیلم در اینترنت</title>	
-<meta name="description" content="جدیدترین فیلمهای سینمایی خارجی دوبله و بدون سانسور را به صورت رایگان در رسانه ایران فیلم پلاس ببینید و دانلود کنید." />
+<meta content='index, follow' name='yahooBOT'/>   
 <meta content='fa' name='language'/>
 <meta http-equiv="content-language" content="fa" />
+<link href='https://1.bp.blogspot.com/-8S7z7LUsho0/X0MTr_PxHUI/AAAAAAAAA7g/t7RAzY-5CWwNIr-9UxYwPT_7om1KNOxmwCLcBGAsYHQ/s1600/favicon-32x32.ico' rel='icon' type='image/x-icon'/>
+<link href='https://1.bp.blogspot.com/-8S7z7LUsho0/X0MTr_PxHUI/AAAAAAAAA7g/t7RAzY-5CWwNIr-9UxYwPT_7om1KNOxmwCLcBGAsYHQ/s1600/favicon-32x32.ico' rel='apple-touch-icon'/>
   </head>
   <body dir="rtl">
 <h1>معرفی سایت تماشای آنلاین فیلم رایگان در اینترنت</h1>
